--- a/index.html
+++ b/index.html
@@ -3,17 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <title>2048</title>
+    <script>
+      ;(function () {
+        var defaultW = 750, u = navigator.userAgent;
+        if (/(Android)/i.test(u)) { //Android
+          var version = u.substr(u.indexOf('Android') + 8, 3);
+          if (version > 2.3) {
+            var phoneScale = parseInt(window.screen.width) / defaultW;
+            document.write('<meta name="viewport" content=" user-scalable=no, width=' + defaultW + '", minimum-scale = ' + phoneScale + ', maximum-scale = ' + phoneScale + ', target-densitydpi=device-dpi">');
+          } else {
+            document.write('<meta name="viewport" content="width=' + defaultW + '">');
+          }
+        } else if (/(iPhone|iPad|iPod|iOS)/i.test(u)) {  //ios
+          document.write('<meta name="viewport" content="width=' + defaultW + ', user-scalable=no">');
+        } else {
+          document.write('<style>.game-box{transform:scale(0.6,0.6); -webkit-transform:scale(0.6,0.6); webkit-transform-origin: 50% 30px;transform-origin: 50% 30px}</style>');
+        }
+
+      })();
+    </script>
     <link rel="stylesheet" href="2048.css"/>
 </head>
 <body>
-<header>
-    <!--<h1>2048</h1>-->
-    <!--<a href="javascript:newgame()" id="newGameButton">New Game</a>-->
-    <p>score: <span id="score">0</span></p>
-</header>
+<div class="game-box">
+    <div class="game">
+        <header>
+            <h1>2048</h1>
+            <a href="javascript:newgame()" id="newGameButton">New Game</a>
+            <p>score: <span id="score">0</span></p>
+        </header>
 
-<div id="gridContainer">
+        <div id="gridContainer">
+        </div>
+    </div>
 </div>
+
 
 
 <script src="http://libs.baidu.com/jquery/1.9.0/jquery.min.js"></script>
